--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "run-sequence": "~1.1.2",
         "json-server": "~0.7.25",
         "cookie-parser": "~1.3.5",
-        "express-session": "~1.11.3"
+        "express-session": "~1.11.3",
+        "socket.io": "~1.3.6"
     },
     "dependencies": {}
 }
