--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "json-server": "~0.7.25",
         "cookie-parser": "~1.3.5",
         "express-session": "~1.11.3",
-        "socket.io": "~1.3.6"
+        "socket.io": "~1.3.6",
+        "vulcanize": "~1.4.2",
+        "gulp-vulcanize": "~6.0.0",
+        "gulp-minify-html": "~1.0.2",
+        "gulp-minify-inline": "~0.1.1"
     },
     "dependencies": {}
 }
